--- a/Win32/proj/element/element.vcxproj.filters
+++ b/Win32/proj/element/element.vcxproj.filters
@@ -857,6 +857,9 @@
     <ClCompile Include="..\..\..\SRC\element\twoNodeLink\LinearElasticSpring.cpp">
       <Filter>twoNodeLink</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\SRC\element\twoNodeLink\Inerter.cpp">
+      <Filter>twoNodeLink</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\element\Element.h">
@@ -1523,6 +1526,9 @@
       <Filter>dispBeamColumn</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\element\twoNodeLink\LinearElasticSpring.h">
+      <Filter>twoNodeLink</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\SRC\element\twoNodeLink\Inerter.h">
       <Filter>twoNodeLink</Filter>
     </ClInclude>
   </ItemGroup>
