--- a/Win64/proj/material/material.vcxproj
+++ b/Win64/proj/material/material.vcxproj
@@ -22,7 +22,6 @@
     <ProjectGuid>{B3B28EAB-160F-635A-CD8A-4C4BAA55CF78}</ProjectGuid>
     <SccProjectName />
     <SccLocalPath />
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -80,8 +79,6 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_TCL85;_LIMITSTATEMATERIAL;_NO_NEW_RESTREPO;_HAVE_PSUMAT;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <RuntimeTypeInfo>
-      </RuntimeTypeInfo>
       <PrecompiledHeaderOutputFile>.\..\..\obj\material\debug/material.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\..\..\obj\material\debug/</AssemblerListingLocation>
       <ObjectFileName>.\..\..\obj\material\debug/</ObjectFileName>
@@ -112,8 +109,6 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_TCL85;_LIMITSTATEMATERIAL;_NO_NEW_RESTREPO;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <RuntimeTypeInfo>
-      </RuntimeTypeInfo>
       <PrecompiledHeaderOutputFile>.\..\..\obj\material\debug/material.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\..\..\obj\material\debug/</AssemblerListingLocation>
       <ObjectFileName>.\..\..\obj\material\debug/</ObjectFileName>
@@ -145,8 +140,6 @@
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
-      <RuntimeTypeInfo>
-      </RuntimeTypeInfo>
       <PrecompiledHeaderOutputFile>.\..\..\obj\material\release/material.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\..\..\obj\material\release/</AssemblerListingLocation>
       <ObjectFileName>.\..\..\obj\material\release/</ObjectFileName>
@@ -176,8 +169,6 @@
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
-      <RuntimeTypeInfo>
-      </RuntimeTypeInfo>
       <PrecompiledHeaderOutputFile>.\..\..\obj\material\release/material.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\..\..\obj\material\release/</AssemblerListingLocation>
       <ObjectFileName>.\..\..\obj\material\release/</ObjectFileName>
@@ -229,6 +220,9 @@
     <ClCompile Include="..\..\..\SRC\material\nD\PlateRebarMaterialThermal.cpp" />
     <ClCompile Include="..\..\..\SRC\material\nD\soil\PressureDependMultiYield03.cpp" />
     <ClCompile Include="..\..\..\SRC\material\nD\stressDensityModel\stressDensity.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\nD\stressDensityModel\StressDensityModel.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\nD\stressDensityModel\StressDensityModel2D.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\nD\stressDensityModel\StressDensityModel3D.cpp" />
     <ClCompile Include="..\..\..\SRC\material\nD\UWmaterials\J2CyclicBoundingSurface.cpp" />
     <ClCompile Include="..\..\..\SRC\material\nD\UWmaterials\ManzariDafalias3DRO.cpp" />
     <ClCompile Include="..\..\..\SRC\material\nD\UWmaterials\ManzariDafaliasPlaneStrainRO.cpp" />
@@ -236,6 +230,7 @@
     <ClCompile Include="..\..\..\SRC\material\nD\UWmaterials\PM4Sand.cpp" />
     <ClCompile Include="..\..\..\SRC\material\nD\UWmaterials\PM4Silt.cpp" />
     <ClCompile Include="..\..\..\SRC\material\section\BiaxialHysteretic.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\section\ElasticBDShearSection2d.cpp" />
     <ClCompile Include="..\..\..\SRC\material\section\ElasticWarpingShearSection2d.cpp" />
     <ClCompile Include="..\..\..\SRC\material\section\Elliptical2.cpp" />
     <ClCompile Include="..\..\..\SRC\material\section\FiberSection3dThermal.cpp" />
@@ -246,11 +241,18 @@
     <ClCompile Include="..\..\..\SRC\material\section\LayeredShellFiberSectionThermal.cpp" />
     <ClCompile Include="..\..\..\SRC\material\section\MembranePlateFiberSectionThermal.cpp" />
     <ClCompile Include="..\..\..\SRC\material\section\NDFiberSectionWarping2d.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\section\TimoshenkoSection3d.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\section\WFFiberSection2d.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\section\WSection2d.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\AxialSp.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\AxialSpHD.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\backbone\CappedBackbone.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\backbone\LinearCappedBackbone.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\backbone\MaterialBackbone.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\backbone\MultilinearBackbone.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\BilinearOilDamper.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\BoucWenOriginal.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\BraceMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\BWBN.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\BarSlipMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Bond_SP01.cpp" />
@@ -265,6 +267,7 @@
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Concrete02IS.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Concrete02Thermal.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Concrete04.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\Concrete05.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Concrete06.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Concrete07.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ConcreteCM.cpp" />
@@ -273,12 +276,15 @@
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ConcreteSakaiKawashima.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ConcretewBeta.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ConfinedConcrete01.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\ContinuumUniaxial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\CubicSpline.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\DamperMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Dodd_Restrepo.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\DrainMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ECC01.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\ElasticBDMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ElasticMaterialThermal.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\ElasticPowerFunc.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ENTMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\EPPGapMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\Elastic2Material.cpp" />
@@ -297,6 +303,9 @@
     <ClCompile Include="..\..\..\SRC\material\uniaxial\HookGap.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\HyperbolicGapMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\HystereticMaterial.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\IMKBilin.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\IMKPeakOriented.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\IMKPinching.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ImpactMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\InitStrainMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\InitStressMaterial.cpp" />
@@ -310,6 +319,7 @@
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ModIMKPinching.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ModIMKPinching02.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\MultiLinear.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\Neoprene.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\NewUniaxialMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\OOHystereticMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\OriginCentered.cpp" />
@@ -325,6 +335,7 @@
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ResilienceLow.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ResilienceMaterialHR.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\SAWSMaterial.cpp" />
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\SecantConcrete.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\SelfCenteringMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\SeriesMaterial.cpp" />
     <ClCompile Include="..\..\..\SRC\material\uniaxial\ShearPanelMaterial.cpp" />
@@ -614,6 +625,9 @@
     <ClInclude Include="..\..\..\SRC\material\nD\PlateRebarMaterialThermal.h" />
     <ClInclude Include="..\..\..\SRC\material\nD\soil\PressureDependMultiYield03.h" />
     <ClInclude Include="..\..\..\SRC\material\nD\stressDensityModel\stressDensity.h" />
+    <ClInclude Include="..\..\..\SRC\material\nD\stressDensityModel\StressDensityModel.h" />
+    <ClInclude Include="..\..\..\SRC\material\nD\stressDensityModel\StressDensityModel2D.h" />
+    <ClInclude Include="..\..\..\SRC\material\nD\stressDensityModel\StressDensityModel3D.h" />
     <ClInclude Include="..\..\..\SRC\material\nD\UWmaterials\J2CyclicBoundingSurface.h" />
     <ClInclude Include="..\..\..\SRC\material\nD\UWmaterials\ManzariDafalias3DRO.h" />
     <ClInclude Include="..\..\..\SRC\material\nD\UWmaterials\ManzariDafaliasPlaneStrainRO.h" />
@@ -621,6 +635,7 @@
     <ClInclude Include="..\..\..\SRC\material\nD\UWmaterials\PM4Sand.h" />
     <ClInclude Include="..\..\..\SRC\material\nD\UWmaterials\PM4Silt.h" />
     <ClInclude Include="..\..\..\SRC\material\section\BiaxialHysteretic.h" />
+    <ClInclude Include="..\..\..\SRC\material\section\ElasticBDShearSection2d.h" />
     <ClInclude Include="..\..\..\SRC\material\section\ElasticWarpingShearSection2d.h" />
     <ClInclude Include="..\..\..\SRC\material\section\Elliptical2.h" />
     <ClInclude Include="..\..\..\SRC\material\section\FiberSection3dThermal.h" />
@@ -631,10 +646,17 @@
     <ClInclude Include="..\..\..\SRC\material\section\LayeredShellFiberSectionThermal.h" />
     <ClInclude Include="..\..\..\SRC\material\section\MembranePlateFiberSectionThermal.h" />
     <ClInclude Include="..\..\..\SRC\material\section\NDFiberSectionWarping2d.h" />
+    <ClInclude Include="..\..\..\SRC\material\section\TimoshenkoSection3d.h" />
+    <ClInclude Include="..\..\..\SRC\material\section\WFFiberSection2d.h" />
+    <ClInclude Include="..\..\..\SRC\material\section\WSection2d.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\AxialSp.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\AxialSpHD.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\backbone\CappedBackbone.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\backbone\LinearCappedBackbone.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\backbone\MaterialBackbone.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\BilinearOilDamper.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\BoucWenOriginal.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\BraceMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\BWBN.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\BarSlipMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Bond_SP01.h" />
@@ -646,8 +668,10 @@
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete01.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete01WithSITC.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete02.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete02IS.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete02Thermal.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete04.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete05.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete06.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Concrete07.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ConcreteCM.h" />
@@ -656,12 +680,15 @@
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ConcreteSakaiKawashima.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ConcretewBeta.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ConfinedConcrete01.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\ContinuumUniaxial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\CubicSpline.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\DamperMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Dodd_Restrepo.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\DrainMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ECC01.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\ElasticBDMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ElasticMaterialThermal.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\ElasticPowerFunc.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ENTMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\EPPGapMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\Elastic2Material.h" />
@@ -676,9 +703,13 @@
     <ClInclude Include="..\..\..\SRC\material\uniaxial\FRPConfinedConcrete02.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\GNGMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\HardeningMaterial.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\HardeningMaterial2.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\HookGap.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\HyperbolicGapMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\HystereticMaterial.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\IMKBilin.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\IMKPeakOriented.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\IMKPinching.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ImpactMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\InitStrainMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\InitStressMaterial.h" />
@@ -692,6 +723,7 @@
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ModIMKPinching.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ModIMKPinching02.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\MultiLinear.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\Neoprene.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\NewUniaxialMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\OOHystereticMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\OriginCentered.h" />
@@ -706,6 +738,7 @@
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ResilienceLow.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ResilienceMaterialHR.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\SAWSMaterial.h" />
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\SecantConcrete.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\SelfCenteringMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\SeriesMaterial.h" />
     <ClInclude Include="..\..\..\SRC\material\uniaxial\ShearPanelMaterial.h" />
